--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,14 @@ requires-python = ">=3.7"
 
 [project.urls]
 Repository = "https://github.com/lapets/tonellishanks"
+Documentation = "https://tonellishanks.readthedocs.io"
 
 [project.optional-dependencies]
+docs = [
+    "toml~=0.10.2",
+    "sphinx~=5.0",
+    "sphinx-rtd-theme~=1.1.0"
+]
 test = [
     "pytest~=7.4",
     "pytest-cov~=4.0"
@@ -39,4 +45,4 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
-addopts = "--doctest-modules --cov=tonellishanks --cov-report term-missing"
+addopts = "--doctest-modules --ignore=docs --cov=tonellishanks --cov-report term-missing"
