--- a/.github/workflows/lint-test-cover-docs.yml
+++ b/.github/workflows/lint-test-cover-docs.yml
@@ -1,12 +1,15 @@
 name: lint-test-cover-docs
 on:
-  push
+  push:
+    branches:
+      - '**'
+  workflow_call: # If invoked by build-publish-sign-release workflow.
 jobs:
   lint_test_cover_docs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
     name: "Python ${{ matrix.python-version }}"
     steps:
       - uses: actions/checkout@v4
